# pyservice

./: .coveragerc  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: python-build.yml
pyservice/: __init__.py  action.py  context.py  organizer.py
spec/: action_spec.py  context_spec.py  organizer_spec.py  pyservice_spec.py  test_doubles.py
test/: test_action.py  test_context.py  test_doubles.py  test_example_3.py  test_organizer.py  test_pyservice.py
test/readme_examples/: test_example_1.py  test_example_2.py  test_example_3.py
tests/: test_pyservice.py
