[tool.poetry]
name = "pyservice"
version = "0.1.0"
description = "A light-service like project in Python"
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mamba = "^0.11.1"
expects = "^0.9.0"
Mypy = "^0.782"
flake8 = "^3.8.3"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
